--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Educational PORTAL</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
